<resources>
    <string name="app_name">MovieApp</string>
    <string name="Log_in">Log in</string>
    <string name="signUp_withOptions">Sign in with the following options</string>
    <string name="name_Google">Google</string>
    <string name="name_Apple">Apple</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="question_forRegister">Don\'t have an account ?</string>
    <string name="signUp">Sign up</string>
    <string name="image_description">Movie image of Godzilla vs Kong</string>
    <string name="godzilla_vs_kong">Godzilla vs Kong</string>
    <string name="_2021_action_adventure_2h_35min">2021 - Action, Adventure - 2h 35min</string>
    <string name="_7_2">7.2</string>
    <string name="godzilla_vs_kong_is_a_2021_american_monster_film_directed_by_adam_wingard_in_the_film_kong_clashes_with_godzilla_as_humans_lure_the_ape_into_the_hollow_earth_to_retrieve_a_power_source_for_a_secret_weapon_to_stop_godzilla_s_mysterious_rampages">Godzilla vs. Kong is a 2021 American monster film directed by Adam Wingard. ... In the film, Kong clashes with Godzilla as humans lure the ape into the Hollow Earth to retrieve a power source for a secret weapon to stop Godzilla\'s mysterious rampages.</string>
    <string name="cast">Cast</string>
    <string name="andrew_skarsgard">Andrew Skarsgard</string>
    <string name="billie_brown">Billie Brown</string>
    <string name="rebecca_hall">Rebecca Hall</string>
    <string name="julian_denisson">Julian Denisson</string>
    <string name="brian_henry">Brian Henry</string>
    <string name="dr_nathan_lind">Dr Nathan Lind</string>
    <string name="madison_russell">Madison Russell</string>
    <string name="dr_iilene_andrews">Dr. IIlene Andrews</string>
    <string name="josh_valentine">Josh Valentine</string>
    <string name="bernie_hayes">Bernie Hayes</string>
    <string name="back_arrow">back_arrow</string>
    <string name="trailers">Trailers</string>

    <!--swipe view strings-->
    <string name="popular_movies">Popular Movies</string>
    <string name="tv_shows">TV shows</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="movies">Mov</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="card_view">card view</string>
    <string name="connection_problem">Connection Problem!!</string>
    <string name="movie">movie</string>
    <string name="sub_title">sub title</string>
    <string name="movie_info">Movie Info</string>
    <string name="released_ate">ReleaseD ate:</string>
    <string name="_2019">2019</string>
    <string name="rating">Rating:</string>
    <string name="_8">8</string>
    <string name="runtime">Runtime:</string>
    <string name="_2_3_hr">2.3 hr</string>
    <string name="budget">Budget:</string>
    <string name="_130_000">130,000</string>
    <string name="revenue">Revenue:</string>
    <string name="overview">Overview</string>
    <string name="overview_m">overview .........</string>
    <string name="log_in">Log In</string>
    <string name="have_an_account">Have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up">Sign Up</string>

</resources>