<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MoviesHome"
    tools:context="com.example.swipeview.SwipeView">

    <LinearLayout
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/MoviesHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/movie_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

            <TextView
                android:id="@+id/movie_headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ve"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="-8dp"/>

            <SearchView
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:iconifiedByDefault="true"
                android:queryHint="Search"
                android:queryBackground="@color/white"
                android:searchIcon="@drawable/ic_baseline_search_24"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>

        <TextView
            android:id="@+id/popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:textStyle="bold"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerPopularMovies"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:clipToPadding="true"
            android:overScrollMode="never"
            android:background="@color/grey"
            android:backgroundTintMode="src_over"
            android:elevation="2dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_shows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_shows"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerTvShows"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/grey"
            android:clipToPadding="true"
            android:elevation="4dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/watching_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_watching"
            android:textSize="18sp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPagerContWatching"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/grey"
            android:clipToPadding="true"
            android:overScrollMode="never"
            app:layout_constraintTop_toTopOf="parent"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>